--- a/.github/workflows/fare-cron.yml
+++ b/.github/workflows/fare-cron.yml
@@ -1,13 +1,9 @@
-name: Update flight data (2x/dag)
+name: Update flight data (2x/day)
 
 on:
   schedule:
-    # Winter NL: 06:15 & 18:15  (UTC 05:15 & 17:15)
-    - cron: '15 5 * 10-3 *'
-    - cron: '15 17 * 10-3 *'
-    # Zomer NL: 06:15 & 18:15 (UTC 04:15 & 16:15)
-    - cron: '15 4 * 4-9 *'
-    - cron: '15 16 * 4-9 *'
+    - cron: "15 5 * * *"     # 05:15 UTC  (= 06:15 NL winter, 07:15 NL zomer)
+    - cron: "15 17 * * *"    # 17:15 UTC (= 18:15 NL winter, 19:15 NL zomer)
   workflow_dispatch:
 
 jobs:
@@ -17,17 +13,21 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Install deps
         run: pip install requests
+
       - name: Fetch flight data
         env:
           AMADEUS_API_KEY: ${{ secrets.AMADEUS_API_KEY }}
           AMADEUS_API_SECRET: ${{ secrets.AMADEUS_API_SECRET }}
         run: |
           python tools/fetch_prices.py
+
       - name: Commit & push updated JSON
         run: |
           git config user.name "Flightbot"
